<resources>
    <string name="app_name">Flow</string>
    <string name="app_quote">Stay hydrated all day, every day!</string>

    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_account">Account</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_today">Drank today</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_logout">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>